--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Jenkins e Docker: Pipeline de Integração Continua</li>
     </ul>
