--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
-        <li>Jenkins e Docker: Pipmasasdseline de integração continua</li>
+        <li>Jenkins e Docker: Pipeline de integração continua</li>
 		<li>kubernetes</li>
     </ul>
 </body>
