--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 <body>
 	<h1>Curso de DevOps</h1>
 	
-    <ul>
-        <li>Vagrant: Gerenciando máquinas virtuais</li>
-        <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible: Sua infraestrutura como código</li>
-        <li>Jenkins e Docker: Pipeline de integração continua</li>
-		<li>Kubernetes: Introdução a orquestração de containers</li>
-    </ul>
+    <dl>
+	    <dt>Vagrant</dt>
+        <dd>Gerenciando máquinas virtuais</dd>
+		
+		<dt>Docker</dt>
+        <dd>Criando containers sem dor de cabeça</dd>
+		
+		<dt>Ansible</dt>
+        <dd>Sua infraestrutura como código</dd>
+		
+		<dt>Jenkins e Docker</dt>
+        <dd>Pipeddne de integração continua</dd>
+		
+		<dt>Kubernetes</dt>
+		<dd>Introdução a orquestração de containers</dd>
+    </dl>
 </body>
 </html>
